# grok-build-cli-utilities

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: changelog.md  contributing.md  development.md  examples.md  index.md  installation.md  philosophy.md  quickstart.md
docs/assets/: .gitkeep
docs/commands/: backup.md  config.md  doctor.md  hooks.md  index.md  logs.md  mcp.md  memory.md  plugins.md  sessions.md  skills.md  usage.md  worktree.md
docs/stylesheets/: extra.css
examples/: README.md
examples/sample-skill/: SKILL.md
src/grok_build_cli_utilities/: __init__.py  __main__.py  cli.py
src/grok_build_cli_utilities/commands/: backup.py  config.py  doctor.py  hooks.py  logs.py  mcp.py  memory.py  plugins.py  sessions.py  skills.py  usage.py  worktree.py
src/grok_build_cli_utilities/utils/: common.py  parsers.py
tests/: test_cli.py  test_common.py
